--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"npm i --prefix backend && npm i --prefix frontend && npm run build --prefix frontend",
-    "start":"npm run start --prefix backend"
+    "build": "npm i --prefix backend && npm i --prefix frontend && npm run build --prefix frontend",
+    "start": "npm run start --prefix backend"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Shivam-kumar-khare/Talent_Search.git"
@@ -20,5 +19,8 @@
   "bugs": {
     "url": "https://github.com/Shivam-kumar-khare/Talent_Search/issues"
   },
-  "homepage": "https://github.com/Shivam-kumar-khare/Talent_Search#readme"
+  "homepage": "https://github.com/Shivam-kumar-khare/Talent_Search#readme",
+  "dependencies": {
+    "stream-chat": "^9.24.0"
+  }
 }
